// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sendHeaderEvent sends a basic analytics event 1`] = `
Object {
  "category": "consistent header",
  "event_action": "click",
  "event_category": "consistent header",
  "event_label": "Click here!",
  "event_name": "header_click",
  "event_type": "ui interaction",
  "ga_eventAction": "click",
  "ga_eventCategory": "consistent header",
  "ga_eventLabel": "Click here!",
  "ga_eventValue": "",
  "text": "Click here!",
}
`;

exports[`sendHeaderEvent sends an analytics event with a url 1`] = `
Object {
  "category": "consistent header",
  "event_action": "click",
  "event_category": "consistent header",
  "event_label": "Link to somewhere",
  "event_name": "header_click",
  "event_type": "ui interaction",
  "ga_eventAction": "click",
  "ga_eventCategory": "consistent header",
  "ga_eventLabel": "Link to somewhere",
  "ga_eventValue": "",
  "link_url": "https://somewhere",
  "text": "Link to somewhere",
}
`;
